Ajout des fichiers cart.html et sell.html

--- a/cart.html
+++ b/cart.html
@@ -16,14 +16,14 @@
   <body>
     <nav>
       <div class="content">
-        <a href="index.html">
+        <a href="/">
           <div class="logo">
             <img src="/asset/image/SPINLOG.png" alt="" />
           </div>
         </a>
         <ul>
           <li>
-            <a href="/">
+            <a href="">
               <svg
                 width="29"
                 height="29"
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li>
-            <a href="exploreEverything.html">
+            <a href="">
               <svg
                 width="33"
                 height="33"
@@ -65,7 +65,7 @@
             </a>
           </li>
           <li>
-            <a href="adSearch.html">
+            <a href="">
               <svg
                 width="32"
                 height="32"
@@ -124,10 +124,10 @@
                 />
               </h5>
               <ul class="dropdown">
-                <li class="icon"><a href="shopAllArticle.html">Tous les articles</a></li>
-                <li class="icon"><a href="wantlist.html">Articles dans ma wantlist</a></li>
-                <li class="icon"><a href="purchase.html">Achats</a></li>
-                <li class="icon"><a href="cart.html">Panier</a></li>
+                <li class="icon">Tous les articles</li>
+                <li class="icon">Articles dans ma wantlist</li>
+                <li class="icon">Achats</li>
+                <li class="icon">Panier</li>
               </ul>
             </div>
 
@@ -141,7 +141,7 @@
                 />
               </h5>
               <ul class="dropdown">
-                <li class="icon"><a href="sell.html">Vendre</a></li>
+                <li class="icon">Vendre</li>
                 <li class="icon">Commandes</li>
                 <li class="icon">Inventaires</li>
                 <li class="icon">Facturation</li>
@@ -184,188 +184,157 @@
           </div>
         </div>
       </section>
-      <section class="banner">
-        <div class="container">
-          <div class="banner_content">
-            <img
-              src="/asset/image/musician-playing-electric-guitar 1.png"
-              alt=""
-            />
-          </div>
-        </div>
-      </section>
-      <section class="songs">
+      <section class="boutique">
         <div class="container">
           <div class="content">
-            <h1>Musiques les plus consultées du mois</h1>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item">
-                  <img src="/asset/image/musi1.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Toxic Love -Willing</h4>
-                      <span>DARRYN JONES</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Disco, House</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
+            <div class="div">
+              <h2>
+                Vous avez <span>4</span> articles dans votre panier <br />
+                chez <span>2</span> vendeurs
+              </h2>
+              <div class="rectangle">
+                <button class="act">Tout les articles</button>
+                <button>Ma wantlist</button>
+                <button>Achats</button>
+                <button>Panier</button>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="disq">
+      <section class="table">
         <div class="container">
-          <div class="content">
-            <h2>Disques les mieux notés du mois</h2>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item it_dis">
-                  <img src="/asset/image/R-31.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
+          <div class="buy">
+            <table class="cart">
+              <tr class="cart_tr">
+                <th class="cart_ftr">
+                  Commander chez
+                  <span style="color: #37c480">VINYLE-DISCOUNT</span>
+                  <div>
+                    <img src="/asset/image/Star 1.png" alt="" />
+                    <img src="/asset/image/Star 1.png" alt="" />
+                    <img src="/asset/image/Star 1.png" alt="" />
+                    <img src="/asset/image/Star 1.png" alt="" />
+                    <img src="/asset/image/Star 5.png" alt="" />
+                  </div>
+                  <span style="color: #37c480">97.00 %</span>
+                </th>
+                <th></th>
+              </tr>
+              <tr class="tr want_dt">
+                <td class="td cart_str tr_bottom">
+                  <div class="buy_product">
+                    <div class="want_article">
+                      <div class="img">
+                        <img src="/asset/image/R-31.png" alt="" />
+                      </div>
+                      <div>
+                        <p class="pd">Titre produit</p>
+                        <p>Caractéristiques</p>
+                      </div>
                     </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
+                    <div class="liv_adresse">
+                        <h4>Votre adresse de livraison</h4>
+                        <p>Adresse</p>
+                        <p>Code Postal</p>
+                        <p>Ville</p>
+                        <p>Pays</p>
+                        <a href="" style="color: #37c480;">Modifier mon adresse</a>
                     </div>
                   </div>
-                </div>
-
-                <div class="item it_dis">
-                  <img
-                    src="/asset/image/R-31768115-1726691299-7647 1.png"
-                    alt=""
-                  />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
+                  <div class="book">
+                    <span>16,32€</span>
+                    <button class="want">
+                      <img
+                        src="/asset/image/delete_black_24dp 1.png"
+                        alt=""
+                        style="width: 35px"
+                      />
+                    </button>
+                  </div>
+                </td>
+                <td class="cmd">
+                  <h4 class="pd">Expédition</h4>
+                  <div class="shop_drop">
+                    <div class="drop_list">
+                      <div class="lang_wrapper">
+                        <p>
+                          <span>Standar</span>
+                          <img
+                            src="/asset/image/arrow_forward_ios_black_24dp 2.png"
+                            alt=""
+                            class="bt_arrow"
+                          />
+                        </p>
+                        <ul class="dropdown list">
+                          <li>Pop</li>
+                          <li>Rock</li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
-                </div>
-
-                <div class="item it_dis">
-                  <img src="/asset/image/R-31.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
+                  <h5 class="pd">Paiement</h5>
+                  <div class="paie_s pd">
+                    <img
+                      src="/asset/image/eclipse.png"
+                      alt=""
+                      style="width: 20px"
+                    />
+                    <div class="card_list">
+                      <div class="cards_item"></div>
+                      <div class="cards_item"></div>
+                      <div class="cards_item"></div>
                     </div>
                   </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="songs">
-        <div class="container">
-          <div class="content">
-            <h1>Disques les plus vendus du mois</h1>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item">
-                  <img src="/asset/image/musi1.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Toxic Love -Willing</h4>
-                      <span>DARRYN JONES</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Disco, House</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
+                  <div class="pd">
+                    <p class="mont" style="margin: 10px 0">
+                      sous-total <span>84,00€</span>
                     </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
+                    <p class="mont">Expedition<span>84,00€</span></p>
                   </div>
-                </div>
-              </div>
+                  <div class="pd">
+                    <p class="mont">TOTAL<span>84,00€</span></p>
+                  </div>
+                  <div class="paie_s pd">
+                    <img
+                      src="/asset/image/eclipse.png"
+                      alt=""
+                      style="width: 20px"
+                    />
+                    <p>J’accepte...</p>
+                  </div>
+                  <button style="background-color: #37c480; width: 100%">
+                    Paiement
+                  </button>
+                </td>
+              </tr>
+            </table>
+            <div class="sp_achat">
+              <h4>
+                Acheter des articles sur
+                <a href="/" style="color: #37c480">Spinlog</a>
+              </h4>
+              <p>
+                Votre panier peut contenir des articles de plusieurs vendeurs
+                différents. Lorsque vous serez prêt(e) à payer, vous réglerez
+                chaque commande avec chaque vendeur concerné.
+              </p>
+              <p>
+                Options de paiement variées Spinlog offre une large gamme de
+                méthodes de paiement.
+              </p>
+              <p>
+                Privilégiez les systèmes de paiement offrant une double
+                fonctionnalité essentielle : facilité de transaction et gestion
+                des litiges.
+              </p>
+              <p>
+                Correspondance des adresses de livraison Assurez-vous que
+                l'adresse de livraison indiquée sur Spinlog correspond à celle
+                enregistrée sur votre plateforme de paiement et sur Spinlog.
+                Cela garantit une expédition correcte et évite tout retard ou
+                problème.
+              </p>
             </div>
           </div>
         </div>
