--- a/sell.html
+++ b/sell.html
@@ -16,14 +16,14 @@
   <body>
     <nav>
       <div class="content">
-        <a href="index.html">
+        <a href="/">
           <div class="logo">
             <img src="/asset/image/SPINLOG.png" alt="" />
           </div>
         </a>
         <ul>
           <li>
-            <a href="/">
+            <a href="">
               <svg
                 width="29"
                 height="29"
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li>
-            <a href="exploreEverything.html">
+            <a href="">
               <svg
                 width="33"
                 height="33"
@@ -65,7 +65,7 @@
             </a>
           </li>
           <li>
-            <a href="adSearch.html">
+            <a href="">
               <svg
                 width="32"
                 height="32"
@@ -124,10 +124,10 @@
                 />
               </h5>
               <ul class="dropdown">
-                <li class="icon"><a href="shopAllArticle.html">Tous les articles</a></li>
-                <li class="icon"><a href="wantlist.html">Articles dans ma wantlist</a></li>
-                <li class="icon"><a href="purchase.html">Achats</a></li>
-                <li class="icon"><a href="cart.html">Panier</a></li>
+                <li class="icon">Tous les articles</li>
+                <li class="icon">Articles dans ma wantlist</li>
+                <li class="icon">Achats</li>
+                <li class="icon">Panier</li>
               </ul>
             </div>
 
@@ -141,7 +141,7 @@
                 />
               </h5>
               <ul class="dropdown">
-                <li class="icon"><a href="sell.html">Vendre</a></li>
+                <li class="icon">Vendre</li>
                 <li class="icon">Commandes</li>
                 <li class="icon">Inventaires</li>
                 <li class="icon">Facturation</li>
@@ -184,189 +184,152 @@
           </div>
         </div>
       </section>
-      <section class="banner">
+      <section class="sell">
         <div class="container">
-          <div class="banner_content">
-            <img
-              src="/asset/image/musician-playing-electric-guitar 1.png"
-              alt=""
-            />
-          </div>
-        </div>
-      </section>
-      <section class="songs">
-        <div class="container">
-          <div class="content">
-            <h1>Musiques les plus consultées du mois</h1>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item">
-                  <img src="/asset/image/musi1.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Toxic Love -Willing</h4>
-                      <span>DARRYN JONES</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Disco, House</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
+          <div class="sell_content">
+            <h1>Vendre l’article</h1>
+            <p>
+              Merci de vérifier qu’il s’agit de l’article exact que vous
+              souhaitez vendre.
+            </p>
+            <div class="sell_product">
+              <img src="/asset/image/musi1.png" alt="" />
+              <div class="description">
+                <div>
+                  <h3>Toxic Love -Willing</h3>
+                  <p>DARRYN JONES</p>
                 </div>
+                <table>
+                  <tr class="tr">
+                    <td>Label</td>
+                    <td>
+                      <span style="color: #37c480">Third Man Records</span>- TMR
+                      - 1000
+                    </td>
+                  </tr>
+                  <tr class="tr">
+                    <td>Format</td>
+                    <td>
+                      <span style="color: #37c480">Vinyle</span>, LP, Album
+                    </td>
+                  </tr>
+                  <tr class="tr">
+                    <td>Pays</td>
+                    <td><span style="color: #37c480">Worldwide</span></td>
+                  </tr>
+                  <tr class="tr">
+                    <td>Sortie</td>
+                    <td><span style="color: #37c480">13 sept. 2024</span></td>
+                  </tr>
+                  <tr class="tr">
+                    <td>Genre</td>
+                    <td><span style="color: #37c480">Rock</span></td>
+                  </tr>
+                  <tr class="tr">
+                    <td>Style</td>
+                    <td>
+                      <span style="color: #37c480"
+                        >Alternative Rock, Garage Rock, Blues Rock</span
+                      >
+                    </td>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="disq">
+      <section class="sell">
         <div class="container">
-          <div class="content">
-            <h2>Disques les mieux notés du mois</h2>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item it_dis">
-                  <img src="/asset/image/R-31.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="item it_dis">
-                  <img
-                    src="/asset/image/R-31768115-1726691299-7647 1.png"
-                    alt=""
-                  />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="item it_dis">
-                  <img src="/asset/image/R-31.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
+          <div class="sell_content">
+            <h3>État de l’article et commentaires</h3>
+            <form action="">
+              <div class="etat">
+                <label for="">État du media</label>
+                <div class="lang_wrapper">
+                  <p>
+                    <span>Select condition</span>
+                    <img
+                      src="/asset/image/arrow_forward_ios_black_24dp 2.png"
+                      alt=""
+                      class="bt_arrow"
+                    />
+                  </p>
+                  <ul class="dropdown list">
+                    <li>Anglais</li>
+                    <li>Français</li>
+                  </ul>
                 </div>
               </div>
-            </div>
+              <div class="etat">
+                <label for="">État de la pochette (Facultatif)</label>
+                <div class="lang_wrapper">
+                  <p>
+                    <span>Not graded</span>
+                    <img
+                      src="/asset/image/arrow_forward_ios_black_24dp 2.png"
+                      alt=""
+                      class="bt_arrow"
+                    />
+                  </p>
+                  <ul class="dropdown">
+                    <li>Anglais</li>
+                    <li>Français</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="etat">
+                <label for="">Item</label>
+                <input type="text" placeholder="Title" />
+              </div>
+              <div class="etat">
+                <label for="">Item</label>
+                <input type="text" placeholder="Title" />
+              </div>
+            </form>
           </div>
         </div>
       </section>
-      <section class="songs">
+      <section class="sell">
         <div class="container">
-          <div class="content">
-            <h1>Disques les plus vendus du mois</h1>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item">
-                  <img src="/asset/image/musi1.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Toxic Love -Willing</h4>
-                      <span>DARRYN JONES</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Disco, House</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
+          <div class="sell_content cont">
+            <h3>Prix et expédition</h3>
+            <p>
+              Utilisez le gestionnaire de politique d’expédition pour calculer
+              automatiquement les frais de port afin que l’acheteur puisse payer
+              ta commande immédiatement.
+            </p>
+            <form action="" class="sell_field">
+              <div class="etat">
+                <div class="etat_item">
+                  <label for="">Prix</label>
+                  <input type="text" placeholder="Valeur" />
+                  <div class="check">
+                    <div id="checkbox"></div>
+                    <label for="">Offre autorisée</label>
+                  </div>
+                </div>
+                <div class="etat_item">
+                  <label for="">Pois de l’article</label>
+                  <input type="text" placeholder="Valeur" />
+                  <div class="check">
+                    <div id="checkbox"></div>
+                    <label for="">Valeur par défaut</label>
+                  </div>
+                </div>
+                <div class="etat_item">
+                  <label for="">Compte pour</label>
+                  <input type="text" placeholder="Valeur" />
+                  <div class="check">
+                    <div id="checkbox"></div>
+                    <label for="">Valeur par défaut</label>
                   </div>
                 </div>
               </div>
-            </div>
+              <div class="sell_div">
+                <button>Mettre l'article en vente</button>
+              </div>
+            </form>
           </div>
         </div>
       </section>
